day one. Changes in vscode setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "array": "c",
         "string": "c",
         "string_view": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "type_traits": "c",
+        "random": "c"
     }
 }
